Update requirements for MarkItDown dependencies
Removed optional dependencies from MarkItDown and added necessary engines.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 streamlit
-markitdown[all]
+markitdown
+# Explicitly installing the engines MarkItDown is looking for:
+pdfminer.six
+pandas
+openpyxl
+python-pptx
+beautifulsoup4
+mammoth
+markdown
